FIX: Schema, should have run validate

--- a/composer.json
+++ b/composer.json
@@ -44,5 +44,5 @@
 		"silverstripe-australia/memberprofiles": "self.version"
 	},
     "minimum-stability": "dev",
-    "prefer-stable": "true"
+    "prefer-stable": true
 }
