--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,10 @@
 		"silverstripe/framework": "^4.1",
 		"silverstripe/cms": "^4.1"
 	},
+    "require-dev": {
+        "phpunit/phpunit": "^5.7",
+        "squizlabs/php_codesniffer": "^2.3"
+    },
 	"suggest": {
 		"ajshort/silverstripe-gridfieldextensions": "Allows drag-and-drop reordering of fields"
 	},
