--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
 	"name": "symbiote/silverstripe-memberprofiles",
 	"description": "Member registration and profile management",
-	"type": "silverstripe-module",
+	"type": "silverstripe-vendormodule",
 	"keywords": ["silverstripe", "member", "profile", "registration"],
 	"license": "BSD-3-Clause",
 	"authors": [
